--- a/app/components/lookbook/icon/component.css
+++ b/app/components/lookbook/icon/component.css
@@ -3,7 +3,7 @@
     @apply transition block flex-none leading-none;
 
     svg {
-      @apply w-full h-full stroke-current stroke-2 fill-transparent;
+      @apply w-full h-full stroke-current fill-transparent;
       stroke-linecap: round;
       stroke-linejoin: round;
     }
