--- a/app/views/lookbook/inspector/panels/_preview.html.erb
+++ b/app/views/lookbook/inspector/panels/_preview.html.erb
@@ -1,6 +1,6 @@
 <div class="overflow-hidden h-full w-full">
   <%= lookbook_render :viewport,
-    key: lookbook_preview_path(request.query_parameters).parameterize,
+    key: (lookbook_preview_path(request.query_parameters).parameterize unless Rails.env.test?),
     iframe_id: "preview-iframe",
     src: lookbook_preview_path(request.query_parameters.merge(lookbook_timestamp: Time.now)),
     alpine_data: "$store.inspector.main",
