--- a/app/views/lookbook/previews/preview.html.erb
+++ b/app/views/lookbook/previews/preview.html.erb
@@ -1,5 +1,11 @@
-<% if @render_args[:component] %>
-  <%= render(@render_args[:component], @render_args[:args], &@render_args[:block]) %>
-<% else %>
-  <%= render(@render_args[:template], **@render_args[:locals], &@render_args[:block]) %>
-<% end %>
+<%=
+  output = if @render_args[:component]
+    render(@render_args[:component], @render_args[:args], &@render_args[:block])
+  else
+    render(@render_args[:template], **@render_args[:locals], &@render_args[:block])
+  end
+
+  output = @render_args[:output_transformer].call(output) if @render_args[:output_transformer]
+
+  output
+%>
