--- a/app/views/lookbook/errors/default.html.erb
+++ b/app/views/lookbook/errors/default.html.erb
@@ -5,7 +5,7 @@
     </header>
 
     <div class="px-8 py-6 mb-8 border-t border-b border-red-200 bg-red-100 text-base leading-relaxed">
-      <pre class="whitespace-pre-wrap font-sans leading-tight text-red-900"><%= @error.message %></pre>
+      <pre class="whitespace-pre-wrap font-ui leading-tight text-red-900"><%= @error.message %></pre>
     </div>
 
     <% if @error.file_path %>
