--- a/app/components/lookbook/page_tabs/component.html.erb
+++ b/app/components/lookbook/page_tabs/component.html.erb
@@ -1,5 +1,5 @@
  <%= render_component_tag "x-data": "{ activeTab: null }" do %>
-  <div class="flex w-full border-b border-lookbook-divider mb-6">
+  <div class="flex w-full border-b border-lookbook-divider mb-6 lg:mb-8">
     <%= lookbook_render :tabs, theme: :page do |t| %>
       <% @tabs.each do |props| %>
         <%= t.with_tab **props %>
