--- a/docs/src/_partials/_mobile_nav.erb
+++ b/docs/src/_partials/_mobile_nav.erb
@@ -1,5 +1,5 @@
 <div
-  class="absolute left-0 right-0 bottom-0 top-12 z-30 md:hidden transition"
+  class="absolute left-0 right-0 bottom-0 top-[80px] z-[1000] md:hidden transition"
   :class="{
     'bg-black/40 backdrop-blur-sm pointer-events-auto': mobileNavOpen,
     'bg-black/0 pointer-events-none': !mobileNavOpen
@@ -7,7 +7,7 @@
   x-transition.opacity
   x-cloak></div>
 <div
-  class="absolute bg-white px-6 py-6 top-12 right-0 h-[calc(100vh_-_48px)] w-full max-w-[340px] border-l border-gray-300 overflow-y-auto space-y-10 z-40 transition md:hidden"
+  class="absolute bg-white px-6 py-6 top-[80px] right-0 h-[calc(100vh_-_48px)] w-full max-w-[340px] border-l border-gray-300 overflow-y-auto space-y-10 z-[1100] transition md:hidden"
   :class="{
     'translate-x-0': mobileNavOpen,
     'translate-x-full': !mobileNavOpen
