refactor(pages): don't apply page prose styles to notes panel

--- a/app/components/lookbook/prose/component.css
+++ b/app/components/lookbook/prose/component.css
@@ -18,4 +18,8 @@
       @apply rounded-md;
     }
   }
+
+  #page [data-component="prose"] h2 {
+    @apply border-b border-lookbook-divider pb-3;
+  }
 }
