--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1693,6 +1693,12 @@ pre[class*="language-"] {
   border-radius: .375rem;
 }
 
+#page [data-component="prose"] h2 {
+  border-bottom-width: 1px;
+  border-color: var(--lookbook-divider);
+  padding-bottom: .75rem;
+}
+
 [data-component="tabs-dropdown-tab"]:not(.hidden) {
   border-bottom-width: 1px;
   border-bottom-color: var(--lookbook-divider);
@@ -4054,18 +4060,6 @@ select.compact {
 
 .prose-h1\:font-bold :where(h1):not(:where([class~="not-prose"] *)) {
   font-weight: 700;
-}
-
-.prose-h2\:border-b :where(h2):not(:where([class~="not-prose"] *)) {
-  border-bottom-width: 1px;
-}
-
-.prose-h2\:border-lookbook-divider :where(h2):not(:where([class~="not-prose"] *)) {
-  border-color: var(--lookbook-divider);
-}
-
-.prose-h2\:pb-3 :where(h2):not(:where([class~="not-prose"] *)) {
-  padding-bottom: .75rem;
 }
 
 .prose-a\:text-lookbook-prose-link :where(a):not(:where([class~="not-prose"] *)) {
